# pyfia

./: .Rbuildignore  .bandit  .cspell.json  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AI_AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  DATA_SCIENCE_REVIEW.md  DESCRIPTION  DEVELOPMENT.md  ESTIMATOR_REFACTORING_GUIDE.md  EVALIDATOR_MATCH_SUMMARY.md  FIA_WORKING_QUERY_BANK.md  GROWTH_EVALUATION_FINDINGS.md  GROWTH_REWRITE_SUCCESS.md  GROWTH_VALIDATION_SUMMARY.md  LOBLOLLY_PINE_ANALYSIS_SUMMARY.md  MIGRATION_SUMMARY.md  MODERN_PACKAGE_STRUCTURE.md  MORTALITY_VALIDATION_SUMMARY.md  Makefile  Mortality_with_variance.sql  NEWS.md  PHASE_2A_BASE_ESTIMATOR_ARCHITECTURE.md  PHASE_2A_MODULE_MIGRATION_ANALYSIS.md  PHASE_2B_COMPLETION.md  PLOT_DOMAIN_IMPLEMENTATION.md  PR35_VARIANCE_ANALYSIS.md  PR8_STATISTICAL_REVIEW.md  PR9_ARCHITECTURE_REVIEW.md  PR9_REVIEW_SUMMARY.md  PR9_STATISTICAL_REVIEW.md  PYFIA_ESTIMATOR_ROADMAP.md  README.Rmd  (+140 more)
.claude/: settings.local.json
.github/: CLAUDE.md  PULL_REQUEST_TEMPLATE.md
ARCHITECTURE_DIAGRAMS/: index.html
COMPREHENSIVE_PERFORMANCE_REPORT/: index.html
DEVELOPMENT/: index.html
ENHANCEMENT_PLAN_DOWNLOAD/: index.html
PRE_COMMIT_GUIDE/: index.html
PROPERTY_TESTING_GUIDE/: index.html
PYDANTIC_V2_GUIDE/: index.html
QUERY_OPTIMIZATION_INTEGRATION/: index.html
R/: areaChange.R  areaChangeStarter.R  areaChange_new.R  areaStarter.R  biomass_new.R  carbonStarter.R  carbon_new.R  clip.R  fsi.R  globalVars.R  growMort.R  growMortStarter.R  plotFIA.R  readWriteGet.R  tpaStarter.R  util.R  vitalRatesStarter.R  volume.R  volumeStarter.R  writeFIA.R
ai_agent/: index.html
api/: index.html
benchmarks/: MANUSCRIPT_BENCHMARKS.md  METHODOLOGY.md  README.md  benchmark_two_stage_aggregation.py  results_full_ri.csv  results_ri.csv
data/: fiaRI.rda
dev/: DEVELOPMENT.md  ENHANCEMENT_PLAN_DOWNLOAD.md
docs/: ADVANCED_AREA_WORKFLOW.md  AI_AGENT.md  ARCHITECTURE_DIAGRAMS.md  BUSINESS_EVALUATION.md  CNAME  COMPREHENSIVE_PERFORMANCE_REPORT.md  DEVELOPMENT.md  ENHANCED_FORMATTING.md  ENHANCEMENT_PLAN_DOWNLOAD.md  FIA_WORKING_QUERY_BANK.md  INTELLIGENT_DOMAIN_FILTERING.md  MODERN_AGENT_MIGRATION.md  MORTALITY_ESTIMATION_PLAN.md  MORTALITY_WORKFLOW.md  PHASE3_COMPLETION_REPORT.md  PHASE3_PERFORMANCE_REPORT.md  PHASE3_PERFORMANCE_SUMMARY.md  PHASE4_STEP_LIBRARY_COMPLETION.md  PRE_COMMIT_GUIDE.md  PROPERTY_TESTING_GUIDE.md  PYDANTIC_V2_GUIDE.md  QUERY_OPTIMIZATION_INTEGRATION.md  README.md  SCHEMA_VALIDATION_GUIDE.md  TYPE_SAFETY_ROADMAP.md  architecture_diagram.md  configuration_guide.md  docs.json  examples.md  examples.mdx  fia_technical_context.md  getting-started.md  getting-started.mdx  index.md  index.mdx  lazy_evaluation_guide.md  mortality_module_verification.md  requirements.txt  tags.md  variance_calculation_guide.md  (+1 more)
examples/: database_backend_demo.py  database_interface_demo.py  estimate_california_volume_by_diameter.py  estimate_minnesota_forest_area.py  estimate_oregon_forest_area.py  georgia_mortality_by_groups.py  harvest_panel_analysis.py  index.html  join_optimizer_demo.py  mortality_by_cause.py  mortality_calculator_demo.py  mortality_config_demo.py  mortality_with_new_config.py  plot_data_access.py  plot_domain_example.py  query_builder_usage.py  using_output_formatter.py
fia_technical_context/: index.html
getting-started/: index.html
guides/: index.html
inst/: CITATION
lazy_evaluation_guide/: index.html
man/: area.Rd  areaChange.Rd  biomass.Rd  carbon.Rd  clipFIA.Rd  customPSE.Rd  diversity.Rd  dwm.Rd  findEVALID.Rd  fsi.Rd  getDesignInfo.Rd  getFIA.Rd  growMort.Rd  intersectFIA.Rd  invasive.Rd  makeClasses.Rd  plotFIA.Rd  readFIA.Rd  seedling.Rd  standStruct.Rd  tpa.Rd  vegStruct.Rd  vitalRates.Rd  volume.Rd  writeFIA.Rd
notebooks/: 01_getting_started.ipynb  02_core_estimators.ipynb  03_filtering_grouping.ipynb  04_change_analysis.ipynb  05_validation_statistics.ipynb  README.md  helpers.py
overrides/: home.html
pyfia/: __init__.py  ai_agent.py  ai_agent_enhanced.py  ai_agent_modern.py  area.py  biomass.py  cli.py  cli_ai.py  cli_ai_agent.py  cli_base.py  cli_config.py  cli_query.py  cognee_fia_agent.py  cognee_setup.py  common_joins.py  config.py  core.py  data_reader.py  db_schema_mapper.py  duckdb_query_interface.py  estimation_utils.py  filters.py  grouping.py  growth.py  growth_direct.py  models.py  mortality.py  mortality_direct.py  tpa.py  tree.py  volume.py
queries/: README.md  best_practices.md  common_pitfalls.md  evaluator_methodology.md  index.html
reference/: fia_technical_context.md
scripts/: __init__.py  build_southern_database.py  gen_api_docs.sh  nghgi_dead_wood_diagnostic.py  nghgi_multi_year_validation.py  nghgi_validation_stage_a.py  nghgi_validation_stage_b.py  setup_precommit.py  typecheck.py  validate_against_evalidator.py  validate_mortality_implementation.py
search/: search_index.json
tags/: index.html
tests/: GROWTH_TEST_SUMMARY.md  TEST_STRATEGY.md  benchmark_two_stage_aggregation.py  conftest.py  debug_mortality.py  fixtures.py  run_phase3_tests.py  test_area.py  test_area_aggregation_issue.py  test_area_edge_cases.py  test_area_fixed.py  test_area_georgia_integration.py  test_area_integration.py  test_area_lazy_loading.py  test_area_performance.py  test_area_real.py  test_area_variance.py  test_backends.py  test_base_estimator_aggregation.py  test_biomass_comprehensive.py  test_biomass_published.py  test_carbon_flux.py  test_carbon_pools.py  test_carbon_pools_evalidator.py  test_cli_base.py  test_cli_utils.py  test_common_joins.py  test_config_adapter.py  test_converter.py  test_core_comprehensive.py  test_data_reader_comprehensive.py  test_database_integration_comprehensive.py  test_database_interface.py  test_downloader.py  test_enhanced_formatting.py  test_estimation_utils_comprehensive.py  test_evalid_parser.py  test_evalidator.py  test_evalidator_comprehensive.py  test_filters.py  (+54 more)
variance_calculation_guide/: index.html
vignettes/: FHM2020Report.Rmd  FHM2020Report.html  alternativeEstimators.Rmd  at.Rmd  (+25 more)
(+684 files in other folders)
