[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfia"
version = "0.1.0"
description = "High-performance Python implementation for Forest Inventory Analysis"
readme = "README.md"
authors = [
    {name = "Chris Mihiar", email = "28452317+mihiarc@users.noreply.github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.31.0",
    "numpy>=2.3.0",
    "connectorx>=0.3.1",
    "rich>=13.7.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
spatial = ["geopandas>=1.1.0", "shapely>=2.1.1"]
pandas = ["pandas>=2.3.0"]
langchain = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0", 
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0"
]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "ty>=0.0.1a11",
]
all = ["pyfia[spatial,pandas,langchain,dev]"]

[project.urls]
Homepage = "https://github.com/mihiarc/pyfia"
Documentation = "https://github.com/mihiarc/pyfia"
Repository = "https://github.com/mihiarc/pyfia"
Issues = "https://github.com/mihiarc/pyfia/issues"

[project.scripts]
pyfia = "pyfia.cli:main"
pyfia-ai = "pyfia.cli_ai:main"

[tool.setuptools]
packages = ["pyfia"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # line too long
    "N803",  # argument name should be lowercase (keeping R/FIA conventions)
    "N815",  # mixed case variable in class scope (keeping R/FIA conventions)
    "E722",  # bare except (will fix these later)
    "E402",  # module import not at top (will fix these later)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
